--- a/test/zdtm/static/Makefile
+++ b/test/zdtm/static/Makefile
@@ -174,6 +174,7 @@ TST_NOFILE	:=				\
 		userns00			\
 		userns01			\
 		userns02			\
+		netns_sub_veth			\
 #		jobctl00			\
 
 ifneq ($(SRCARCH),arm)
