--- a/test/zdtm/static/Makefile
+++ b/test/zdtm/static/Makefile
@@ -173,6 +173,7 @@ TST_NOFILE	:=				\
 		netns_sub			\
 		userns00			\
 		userns01			\
+		userns02			\
 #		jobctl00			\
 
 ifneq ($(SRCARCH),arm)
@@ -456,6 +457,7 @@ socket-tcp6-closing:	CFLAGS += -D ZDTM_IPV6
 socket-tcp6-unconn:	CFLAGS += -D ZDTM_IPV6
 
 pty-console:		CFLAGS += -D ZDTM_DEV_CONSOLE
+userns02:		CFLAGS += -D USERNS02
 
 $(LIB):	force
 	$(Q) $(MAKE) -C $(LIBDIR)
