test/make: suppress "Nothing to be done for `default'."
Let's pretend that we're doing something ;-D

FWIW: cleaning two lines in the test output:
Acked-by: Cyrill Gorcunov <gorcunov@openvz.org>

========================== Run zdtm/static/tty03 in h ==========================
make[2]: Nothing to be done for `default'.
Start test
make[2]: Nothing to be done for `default'.
./tty03 --pidfile=tty03.pid --outfile=tty03.out
Run criu dump
Run criu restore
Send the 15 signal to  24
Wait for zdtm/static/tty03(24) to die for 0.100000
Removing dump/zdtm/static/tty03/24
========================= Test zdtm/static/tty03 PASS ==========================

Signed-off-by: Dmitry Safonov <dsafonov@virtuozzo.com>
Signed-off-by: Andrei Vagin <avagin@virtuozzo.com>

--- a/test/zdtm/Makefile.inc
+++ b/test/zdtm/Makefile.inc
@@ -58,6 +58,7 @@ DEPEND.c = $(COMPILE.c) -MM -MP
 	$(Q)$(CC) $(LDFLAGS) $^ $(LDLIBS) -o $@
 
 default: all
+	@true
 .PHONY: default
 
 gitignore-clean:
